<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:color= "@color/white"
    app:tint = "@color/white">

    <item
        android:id="@+id/action_settings_btn"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_contact_btn"
        android:icon="@drawable/ic_contact"
        android:title="@string/action_contactus" />

    <item
        android:id="@+id/action_aboutus_btn"
        android:icon="@drawable/ic_info"
        android:iconTint="@color/colorPrimary"
        android:title="@string/action_aboutus" />

    <item
        android:id="@+id/action_logout_btn"
        android:icon="@drawable/logout"
        android:iconTint="@color/colorPrimary"
        android:title="@string/action_logout" />
</menu>