<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    tools:context=".ContactUsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_form"
                android:textSize="18dp"
                android:textColor="@color/colorPrimaryDark">

            </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/contact_form_name"
            app:errorEnabled="true"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/your_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/contact_form_email"
                app:errorEnabled="true"
                app:helperText="Mail Account you are currently logged in with"
                app:suffixText="@string/mail_suffix"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/contact_form_subject"
                app:errorEnabled="true"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/contact_form_message"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:counterMaxLength="150"
                app:boxBackgroundMode="outline"
                android:inputType="textMultiLine"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/send_mail_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:backgroundTint = "@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:text="@string/send_message"
                style="@style/Widget.MaterialComponents.Button"
            />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="#faf2f2"
                app:cardElevation="1dp"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/call"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/ic_call"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />


                    <TextView
                        android:id="@+id/callUs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="32dp"
                        android:text="Call Us"
                        android:textColor="@color/colorAccent"
                        android:textAllCaps="false"
                        android:textSize="18dp"
                        app:layout_constraintStart_toEndOf="@+id/call"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />


                    <TextView
                        android:id="@+id/phonenumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="3dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="call"
                        android:text="@string/phonenumber"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/call"
                        app:layout_constraintTop_toBottomOf="@+id/callUs"
                        tools:ignore="MissingConstraints" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/address_img"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/ic_location"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/call"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="245dp"
                        android:layout_height="47dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/address"
                        android:textSize="16dp"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toEndOf="@id/address_img"
                        app:layout_constraintTop_toBottomOf="@id/phonenumber"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>